<resources>
    <string name="app_name">Mogi para Turistas</string>
    <string name="about">Sobre a Cidade</string>
    <string name="spots">Picos Turísticos</string>
    <string name="restaurants">Onde Comer</string>
    <string name="to_buy">Compras e etc</string>
    <string name="festivals">Festivais</string>
    <string name="history_city_name">Mogi das Cruzes</string>
    <string name="history_city_foundation">	1 de setembro de 1560</string>
    <string name="history_city_inhabitants">433.901 habitantes</string>
    <string name="history_city_area">713.291 km²</string>
    <string name="history_text">\t\t\tMogi das Cruzes é a cidade mais importante da região do
        Alto-Tietê, na macro região da Grande São Paulo. Fundada em primeiro de setembro de 1560,
        como povoado, e servindo como ponto de descanso na rota dos bandeirantes para São Paulo,
        ganhou status de “vila” no ano de 1611, elevado a “cidade” em 1865, e finalmente a
        “comarca” em 1874.\n\n\t\t\tA cidade é famosa por acolher imigrantes de toda parte do
        mundo, com destaque às comunidades nipônica e sirio libanesa, assim como de outras
        regiões do Brasil, como nordestinos, mineiros e paranaenses. Essa mistura se reflete no
        modo de vida do mogiano, enriquecendo muito a cultura da cidade.</string>
    <string name="spot_title_one">Pico do Urubu</string>
    <string name="spot_title_two">Praça da Matriz</string>
    <string name="spot_title_three">Praça do Carmo</string>
    <string name="spot_title_four">Parque do Centenário</string>
    <string name="spot_title_five">Teatro Municipal</string>
    <string name="spot_title_six">Casarão do chá</string>
    <string name="spot_title_seven">Orquidário Oriental</string>
    <string name="spot_title_eight">Parque das Neblinas</string>
    <string name="spot_title_nine">Parque Francisco de Mello</string>
    <string name="spot_title_ten">Estádio do Nogueirão</string>
    <string name="spot_text_one">\t\tCom uma vista privilegiada de 360º da cidade e uma altitude
        de 1.160m acima do nível do mar, quem gosta de se sentir nas nuvens, encontra no Pico do
        Urubu a estrutura necessária para observar a cidade ou voar de paraglider ou asa delta. O
        voo livre vem colorindo os céus de Mogi das Cruzes há quase 30 anos.\n\n\t\tLocalizado em
        um ponto culminante da Serra do Itapety é uma formação natural frequentado por
        praticantes de voo livre, principalmente o parapente.\n\n\t\tAmantes de esportes
        radicais, os membros do Mogi Clube de Voo Livre frenquentam o pico assiduamente e também
        fazem voos duplos com interessados em conhecer o esporte. No Pico do Urubu podem ser
        realizados voos de parapente ou asa delta, mas atualmente o parapente é mais praticado.</string>
    <string name="spot_text_two">\t\tConstruída no mesmo local, onde foi erguida a primeira
        capela do povoamento, e em 1902 foi construída uma igreja destinada a Padroeira
        Sant\’Anna. Em 1952 foi idealizada pelo Monsenhor Roque Pinto de Barros, Vigário da
        Paróquia, uma nova igreja matriz. O projeto de sua construção foi inspirado na
        arquitetura romana dos primeiros templos cristãos, sua fachada compõem-se de um corpo
        central, correspondente a nave principal, ladeado por duas torres. Um conjunto de três
        pórticos em arco sobressai-se na formação do lado externo. Sob a torre direita
        localiza-se o batistério. A Igreja Matriz de Sant\’Anna, marca o Centro Histórico inicial
        da cidade de Mogi das Cruzes.</string>
    <string name="spot_text_three">\t\tO conjunto das Igrejas do Carmo é composto de dois
        edifícios, ligados internamente por um pátio localizado atrás da torre sineira. É um dos
        patrimônios históricos da cidade tombados pelo Instituto do Patrimônio Histórico e
        Artístico Nacional (Iphan). A Igreja da Ordem Primeira é a mais antiga, datando sua
        construção de 1633. A Igreja da Ordem Terceira (a da esquina) foi construída em 1780 e,
        como as igrejas de terceiros, visa atender aos leigos consagrados à devoção
        carmelita.</string>
    <string name="spot_text_four">\t\tA área do atual Parque Centenário já foi, na década de 70,
        uma importante fonte de extração de areia para o Município de Mogi das Cruzes, através da
        Empresa de Mineração Lopes, que explorou o mineral utilizando a técnica de desmonte
        hidráulico nas proximidades das margens do Rio Tietê. Com o esgotamento do minério, o
        lençol freático que alimenta o Rio Tietê aflorou, formando os enormes lagos
        atuais.\n\n\t\tApós um período de inatividade, o local foi utilizado como pesqueiro. Em
        meados de 2007, foi idealizado um parque homenageando o centenário da imigração japonesa
        e, em 28 de junho de 2008, foi inaugurado o Parque Centenário. Com 21,5 hectares, sua
        área inclui quatro lagos com pontes flutuantes em estilo oriental, a praça do Imigrante,
        espaço Bom Odori–Samba, Posto de Informações Turísticas, locação de Stand Up Paddle,
        entre outros.\n\n\t\tO parque está inserido na Área de Proteção Ambiental da Várzea do
        Rio Tietê. Em alguns trechos das margens do rio foram plantadas mudas nativas visando
        restaurar a mata ciliar existente. Em outros pontos, somente o enriquecimento florestal.
        No interior do parque, entre as espécies plantadas estão ipês, paineiras, quaresmeiras,
        palmeiras e uma grande quantidade de cerejeiras, árvore símbolo do Japão. O parque preza
        por possuir extensa trilha que margeia a faixa de preservação permanente do rio, também
        por possuir áreas de playground, museus e áreas cobertas para eventos, possibilitando uma
        maior integração entre a comunidade e o parque urbano.\n\n\t\tDa avifauna encontrada,
        existem 86 espécies como quero-quero, anus, sabiás, saíras, socós e garças, entre outros.</string>
    <string name="spot_text_five">\t\tEspaço cultural com foco em peças teatrais e apresentações
        de dança, cursos e palestras em sobrado centenário.\n\n\t\tA pedra fundamental foi
        lançada em 19 de setembro de 1901 e o Theatro foi inaugurado em 06 de dezembro de 1902.
        Com o advento do cinema e o declínio de certos espetáculos teatrais, o Theatro Vasques
        acabou tornando-se sede da Câmara Municipal de 1936 a 1937, quando foi fechado pelo
        Estado Novo, e só foi reaberto em 1948 para abrigar novamente a Câmara Municipal. A
        partir de 1980, o teatro é reformado e reinaugurado, como Teatro Municipal \"Paschoal
        Carlos Magno\". Após nova reforma em 2002, o Teatro volta a chamar-se \"Theatro
        Vasques\". O projeto original do edifício, cenografia, pintura e distribuição interna,
        inclusive os camarins, foram confiados ao ator Roque de Castilhos, ex-aluno da Escola
        Politécnica do Rio de Janeiro.\n\n\t\tO prédio foi tombado pelo Conselho Municipal de
        Preservação do Patrimônio Histórico, Cultural, Artístico e Paisagístico de Mogi das
        Cruzes – COMPHAP</string>
    <string name="spot_text_six">\t\tLocalizado no Cocuera, bairro rural de Mogi, o Casarão do
        Chá é uma importante herança da arquitetura japonesa no Brasil. Tem toda a estrutura
        feita de madeira – em sua construção não foram usados pregos ou parafusos, só encaixes de
        madeira (tradicional técnica japonesa usada por causa dos constantes terremotos). As
        vigas são de madeira in natura e em cada encaixe há um signo em kandi (ideogramas). A
        cobertura é a tradicional irimoya (telhado côncavo, voltado para dentro) e a planta é
        livre (com poucas divisões internas).</string>
    <string name="spot_text_seven">\t\tAs primeiras atividades do Orquidário começaram em 1984. No
        local era produzida apenas uma variedade de orquídea, a Dendrobium Nobile, conhecida
        popularmente como Olho de Boneca. Em 1986, o espaço recebeu o nome de Orquidário
        Oriental. Atualmente são produzidas diversas variedades de orquídeas e o Orquidário é
        referência no cultivo.\n\n\t\tHá mais de 20 anos o Orquidário Oriental investe e trabalha
        para o desenvolvimento e aprimoramento das belezas das orquídeas. A sua disposição o
        Orquidário possui uma infra-estrutura de mais de 20 mil metros quadrados entre estufas e
        laboratório, produzindo cerca de 300 mil plantas floridas e 1 milhão de mudas ao ano das
        mais variadas espécies.\n\n\t\tO Orquidário Oriental ainda conta com uma loja show-room,
        localizada no Parque Hana no Mori, a 50 km de São Paulo, que em meio a muita área verde e
        as belas paisagens da Serra do Itapeti, oferece suporte de serviços e produtos para quem
        se interessa pelo cultivo de orquídeas, além de amplo estacionamento e área de
        alimentação.\n\n\t\tTanta organização e tradição resultam em exemplares exuberantes,
        ricos em cores e formas, com ótimo custo benefício para admiradores de flores e
        orquidófilos.\n\n\t\tAtrativos: Orquídeas, insumos, vasos, artesanato, frutas e
        restaurante.</string>
    <string name="spot_text_eight">\t\tO Parque das Neblinas é um reserva privada administrada
        pelo Instituto Ecofuturo, localizada no limite dos municípios de Mogi das Cruzes e
        Bertioga. Reconhecido desde 2006 como Posto Avançado da Reserva da Biosfera do Cinturão
        Verde da Cidade de São Paulo. É um pólo de educação ambiental, pesquisa científica,
        cultivo de espécies ameaçadas e turismo ecológico. O Parque possui trilhas, nascente,
        cachoeira da mineração e passarela suspensa (com 100 m de extensão).\n\n\t\tO parque traz
        consigo a proposta de gestão a partir do desenvolvimento de tecnologias socioambientais,
        onde o relacionamento com a comunidade permeia todos os seus programas.\n\n\t\tO Parque
        das Neblinas é uma excelente opção de ecoturismo. Conta com uma boa infraestrutura de
        receptivo. Café da manhã e almoço pagos à parte e deliciosos. Em relação ao ecoturismo
        conta com trilhas autoguiadas e uma trilha monitorada que deve ser agendada
        antecipadamente e ter no mínimo 6 pessoas.</string>
    <string name="spot_text_nine">\t\tO Parque Natural Municipal Francisco Affonso de Mello –
        Chiquinho Veríssimo, na Serra do Itapeti, pode ser considerado um grande viveiro da
        flora e fauna nativas da Mata Atlântica na cidade. Com área de 353 hectares, o local
        é hoje ponto de referência para trabalhos científicos e referencial para a comunidade,
        que participa de visitas monitoradas.</string>
    <string name="spot_text_ten">\t\tO estádio municipal Francisco Ribeiro Nogueira, conhecido
        como Nogueirão, recebe os jogos de competições oficiais da Federação Paulista de Futebol,
        partidas decisivas da Liga Municipal de Futebol e também eventos beneficentes. O local,
        construído na década de 1990, tem capacidade para cerca de 10 mil pessoas.\n\n\t\tAlém
        das dependências do estádio, o complexo do Nogueirão também possui uma quadra para a
        prática de Street Ball, o basquete de rua. A estrutura foi montada em uma área pública,
        antes sem utilização, ao lado do estádio e pode ser utilizada pela comunidade.</string>
    <string name="spot_when_one">Sempre aberto</string>
    <string name="spot_when_two">Sempre aberto</string>
    <string name="spot_when_three">Sempre aberto</string>
    <string name="spot_when_four">Todos os dias, das 7 às 18 horas</string>
    <string name="spot_when_five">Aberto eventualmente.</string>
    <string name="spot_when_six">Aos domingos, a partir das 9h</string>
    <string name="spot_when_seven">De terça a domingo, inclusive feriados, das 9 às 17 horas</string>
    <string name="spot_where_one">Estrada da Cruz do Século</string>
</resources>